--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,7 +33,7 @@ for:
       only: 
         - job_name: linux_64
     install:
-      - sudo add-apt-repository --quiet --yes ppa:ubuntu-toolchain-r/test
+      - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
       - sudo apt-get --quiet --yes update
       - sudo apt-get --quiet --yes install -y g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib
     build_script:
