--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,14 +34,14 @@ for:
         - job_name: linux_64
     install:
       - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
-      - sudo apt-get --quiet --yes update
-      - sudo apt-get --quiet --yes install -y g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib
+      - sudo apt-get -qq -y update
+      - sudo apt-get -qq -y install -y g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib
     build_script:
-      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/libpng/*.c
-      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/jpeglib/*.c
-      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/zlib/*.c
-      - gcc-5 -c -fPIC -std=c17 -xc ./kuba/*.c
-      - g++-5 -fPIC -shared -std=c++17 -Wall -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
+      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/libpng/*.c
+      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/jpeglib/*.c
+      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/zlib/*.c
+      - gcc-9 -c -fPIC -std=c17 -xc ./kuba/*.c
+      - g++-9 -fPIC -shared -std=c++17 -Wall -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
 
 
   - matrix:
