--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
-version: '1.300.{build}'
+version: '1.220.{build}'
 
 # Skip re-build caused by tagged release
 skip_tags: true
@@ -40,7 +40,7 @@ for:
       - gcc-9 -c -fPIC -std=c17 -xc ./WDL/libpng/*.c
       - gcc-9 -c -fPIC -std=c17 -xc ./WDL/jpeglib/*.c
       - gcc-9 -c -fPIC -std=c17 -xc ./WDL/zlib/*.c
-      - gcc-9 -c -fPIC -std=c17 -xc ./kuba/*.c
+      #- gcc-9 -c -fPIC -std=c17 -xc ./kuba/*.c
       - g++-9 -c -fPIC -std=c++17 -DSWELL_PROVIDED_BY_APP "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
       - g++-9 -fPIC -shared -std=c++17 -Wall -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
 
@@ -52,7 +52,7 @@ for:
       - clang   -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/libpng/*.c 
       - clang   -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/jpeglib/*.c 
       - clang   -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/zlib/*.c 
-      - clang   -c -arch x86_64 -fPIC -std=c17 -xc ./kuba/*.c 
+      #- clang   -c -arch x86_64 -fPIC -std=c17 -xc ./kuba/*.c 
       - clang++ -c -arch x86_64 -std=c++17 -DSWELL_PROVIDED_BY_APP "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
       - clang++ -arch x86_64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
       #- clang++  -arch x86_64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
@@ -66,7 +66,7 @@ for:
       - clang -c -arch arm64 -fPIC -std=c17 -xc ./WDL/libpng/*.c 
       - clang -c -arch arm64 -fPIC -std=c17 -xc ./WDL/jpeglib/*.c 
       - clang -c -arch arm64 -fPIC -std=c17 -xc ./WDL/zlib/*.c 
-      - clang -c -arch arm64 -fPIC -std=c17 -xc ./kuba/*.c 
+      #- clang -c -arch arm64 -fPIC -std=c17 -xc ./kuba/*.c 
       - clang++ -c -arch arm64 -fPIC -std=c++17 -DSWELL_PROVIDED_BY_APP "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
       - clang++ -arch arm64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
     test_script:
