--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,7 @@ environment:
   #  appveyor_build_worker_image: ubuntu
     
   - job_name: macOS_64
-    appveyor_build_worker_image: macos
+    appveyor_build_worker_image: macos-mojave
 
   #- job_name: macOS_64_ARM
   #  appveyor_build_worker_image: macos-bigsur
@@ -49,9 +49,9 @@ for:
       only:
         - job_name: macOS_64
     build_script:
-      - clang   -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/libpng/*.c 
-      - clang   -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/jpeglib/*.c 
-      - clang   -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/zlib/*.c 
+      - clang   -c -arch x86_64 -fPIC -xc ./WDL/libpng/*.c 
+      - clang   -c -arch x86_64 -fPIC -xc ./WDL/jpeglib/*.c 
+      - clang   -c -arch x86_64 -fPIC -xc ./WDL/zlib/*.c 
       #- clang   -c -arch x86_64 -fPIC -std=c17 -xc ./kuba/*.c 
       #- clang++ -c -arch x86_64 -std=c++17 -DSWELL_PROVIDED_BY_APP "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
       #- clang++ -arch x86_64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
