--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,7 @@ environment:
   #  appveyor_build_worker_image: ubuntu
     
   - job_name: macOS_64
-    appveyor_build_worker_image: macos-bigsur
+    appveyor_build_worker_image: macos-mojave
 
   #- job_name: macOS_64_ARM
   #  appveyor_build_worker_image: macos-bigsur
@@ -60,6 +60,7 @@ for:
     test_script:
       - file reaper_js_ReaScriptAPI64.dylib
       - otool -L reaper_js_ReaScriptAPI64.dylib
+      - otool -L reaper_js_ReaScriptAPI64old.dylib
       
   - matrix:
       only:
