--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,11 +19,11 @@ artifacts:
 environment:
   matrix:
 
-  #- job_name: linux_64
-  #  appveyor_build_worker_image: ubuntu
+  - job_name: linux_64
+    appveyor_build_worker_image: ubuntu
     
-  - job_name: macOS_64
-    appveyor_build_worker_image: macos-mojave
+  #- job_name: macOS_64
+  #  appveyor_build_worker_image: macos-mojave
 
   #- job_name: macOS_64_ARM
   #  appveyor_build_worker_image: macos-bigsur
