--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,6 +15,7 @@ branches:
 
 artifacts:
   - path: "reaper_js_ReaScriptAPI*.*"
+  - name: extensionDLLs
   
 environment:
   matrix:
@@ -72,4 +73,4 @@ deploy:
   - provider: GitHub
     auth_token:
       secure: xak+nfVvqW+GAoOuBcLy2isGeQS/mPKtI1nnWsAL3Ajh163kUPIGw2qc8AdQtXV5
-    artifact: reaper_js_ReaScriptAPI*.*
+    artifact: extensionDLLs
