--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,7 +37,7 @@ for:
       - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
       - sudo apt-get -qq -y update
       #- sudo apt-get -qq -y install -y g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib
-      #- sudo apt-get -qq -y install -y libgtk-3-dev
+      - sudo apt-get -qq -y install -y libgtk-3-dev
     build_script:
       - gcc-5 -c -fPIC -std=c11 -xc ./WDL/libpng/*.c
       - gcc-5 -c -fPIC -std=c11 -xc ./WDL/jpeglib/*.c
