--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,11 +20,11 @@ artifacts:
 environment:
   matrix:
 
-  - job_name: linux_64
-    appveyor_build_worker_image: ubuntu1604
+  #- job_name: linux_64
+  #  appveyor_build_worker_image: ubuntu1604
     
-  #- job_name: macOS_64
-  #  appveyor_build_worker_image: macos-mojave
+  - job_name: macOS_64
+    appveyor_build_worker_image: macos-mojave
 
   #- job_name: macOS_64_ARM
   #  appveyor_build_worker_image: macos-bigsur
@@ -36,7 +36,6 @@ for:
     install:
       - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
       - sudo apt-get -qq -y update
-      #- sudo apt-get -qq -y install -y g++-5 libgtk-3-dev gcc-5-multilib g++-5-multilib
       - sudo apt-get -qq -y install -y libgtk-3-dev
     build_script:
       - gcc-5 -c -fPIC -std=c11 -xc ./WDL/libpng/*.c
@@ -50,11 +49,11 @@ for:
       only:
         - job_name: macOS_64
     build_script:
-      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/libpng/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/jpeglib/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/zlib/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./kuba/*.c 
-      - clang++  -arch x86_64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
+      - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/libpng/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/jpeglib/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/zlib/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c11 -xc ./kuba/*.c 
+      - clang++  -arch x86_64 -fPIC -dynamiclib -std=c++14 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64.dylib
       
