--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -52,7 +52,7 @@ for:
       - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/libpng/*.c 
       - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/jpeglib/*.c 
       - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/zlib/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c11 -xc ./kuba/*.c 
+      #- clang -c -arch x86_64 -fPIC -std=c11 -xc ./kuba/*.c 
       - clang++  -arch x86_64 -fPIC -dynamiclib -std=c++14 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64.dylib
