--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,11 +20,11 @@ artifacts:
 environment:
   matrix:
 
-  #- job_name: linux_64
-  #  appveyor_build_worker_image: ubuntu1604
+  - job_name: linux_64
+    appveyor_build_worker_image: ubuntu1604
     
   - job_name: macOS_64
-    appveyor_build_worker_image: macos-mojave
+    appveyor_build_worker_image: macos-bigsur
 
   #- job_name: macOS_64_ARM
   #  appveyor_build_worker_image: macos-bigsur
@@ -38,22 +38,22 @@ for:
       - sudo apt-get -qq -y update
       - sudo apt-get -qq -y install -y libgtk-3-dev
     build_script:
-      - gcc-5 -c -fPIC -std=c11 -xc ./WDL/libpng/*.c
-      - gcc-5 -c -fPIC -std=c11 -xc ./WDL/jpeglib/*.c
-      - gcc-5 -c -fPIC -std=c11 -xc ./WDL/zlib/*.c
+      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/libpng/*.c
+      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/jpeglib/*.c
+      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/zlib/*.c
       #- gcc-9 -c -fPIC -std=c17 -xc ./kuba/*.c
-      - g++-5 -fPIC -shared -std=c++14 -Wall -Wl,--no-undefined -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
+      - g++-9 -fPIC -shared -std=c++17 -Wall -Wl,--no-undefined -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
 
 
   - matrix:
       only:
         - job_name: macOS_64
     build_script:
-      - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/libpng/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/jpeglib/*.c 
-      - clang -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/zlib/*.c 
-      #- clang -c -arch x86_64 -fPIC -std=c11 -xc ./kuba/*.c 
-      - clang++  -arch x86_64 -fPIC -dynamiclib -std=c++14 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
+      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/libpng/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/jpeglib/*.c 
+      - clang -c -arch x86_64 -fPIC -std=c17 -xc ./WDL/zlib/*.c 
+      #- clang -c -arch x86_64 -fPIC -std=c17 -xc ./kuba/*.c 
+      - clang++  -arch x86_64 -fPIC -dynamiclib -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64.dylib
       
