--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,7 +24,7 @@ environment:
     appveyor_build_worker_image: ubuntu1604
     
   - job_name: macOS_64
-    appveyor_build_worker_image: macos-bigsur
+    appveyor_build_worker_image: macos-mojave
 
   #- job_name: macOS_64_ARM
   #  appveyor_build_worker_image: macos-bigsur
@@ -38,11 +38,11 @@ for:
       - sudo apt-get -qq -y update
       - sudo apt-get -qq -y install -y libgtk-3-dev
     build_script:
-      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/libpng/*.c
-      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/jpeglib/*.c
-      - gcc-9 -c -fPIC -std=c17 -xc ./WDL/zlib/*.c
+      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/libpng/*.c
+      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/jpeglib/*.c
+      - gcc-5 -c -fPIC -std=c17 -xc ./WDL/zlib/*.c
       #- gcc-9 -c -fPIC -std=c17 -xc ./kuba/*.c
-      - g++-9 -fPIC -shared -std=c++17 -Wall -Wl,--no-undefined -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
+      - g++-5 -fPIC -shared -std=c++17 -Wall -Wl,--no-undefined -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice" -I"./WDL/libpng" -I"./WDL/zlib/" js_ReaScriptAPI.cpp "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
 
 
   - matrix:
