--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,7 +42,7 @@ for:
       - gcc-5 -c -fPIC -std=c11 -xc ./WDL/jpeglib/*.c
       - gcc-5 -c -fPIC -std=c11 -xc ./WDL/zlib/*.c
       - gcc-5 -c -fPIC -std=c11 -xc ./kuba/*.c
-      - g++-5 -c -fPIC -std=c++14 "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
+      - g++-5 -c -fPIC -std=c++14 -DSWELL_PROVIDED_BY_APP "./WDL/swell/swell-modstub-generic.cpp" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
       - g++-5 -fPIC -std=c++14 -shared -Wall -Wl,--no-undefined -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/jpeglib/" -I"./WDL/lice/" -I"./WDL/libpng/" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp *.o `pkg-config --cflags --libs gtk+-3.0` -o reaper_js_ReaScriptAPI64.so
 
 
@@ -54,7 +54,7 @@ for:
       - clang   -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/jpeglib/*.c 
       - clang   -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/zlib/*.c 
       - clang   -c -arch x86_64 -fPIC -std=c11 -xc ./kuba/*.c 
-      - clang++ -c -arch x86_64 -fPIC -std=c++14 "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
+      - clang++ -c -arch x86_64 -fPIC -std=c++14 -DSWELL_PROVIDED_BY_APP "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
       - clang++    -arch x86_64 -fPIC -std=c++14 -dynamiclib -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm  *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64.dylib
